--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
 
     <div class="nav-bg">
       <nav class="navegacion-principal contenedor">
-        <a class="navegacion__enlace navegacion__enlace--activo" href="/desdisweb/index.html">Inicio</a>
-        <a class="navegacion__enlace" href="/desdisweb/quiensoy.html">Quien Soy</a>
-        <a class="navegacion__enlace" href="/desdisweb/servicios.html">Servicios</a>
-        <a class="navegacion__enlace" href="/desdisweb/contacto.html">Contacto</a>
+        <a class="navegacion__enlace navegacion__enlace--activo" href="index.html">Inicio</a>
+        <a class="navegacion__enlace" href="quiensoy.html">Quien Soy</a>
+        <a class="navegacion__enlace" href="servicios.html">Servicios</a>
+        <a class="navegacion__enlace" href="contacto.html">Contacto</a>
       </nav>
     </div>
 
@@ -41,7 +41,7 @@
           </svg>
           <p>Tocancipá,Cundinamarca</p>
         </div>
-        <a class="boton" href="/desdisweb/contacto.html">Contactar</a>
+        <a class="boton" href="contacto.html">Contactar</a>
       </div>
     </section>
 
@@ -425,7 +425,7 @@
       <p>
         Todos los derechos reservados, <span>DESDISWEB</span><br>
         © Al navegar por este sitio web acepta nuestra
-        <a class="footer" href="/desdisweb/politicas.html">Política de Privacidad y Cookies.</a>
+        <a class="footer" href="politicas.html">Política de Privacidad y Cookies.</a>
       </p>
     </footer>
   </body>
