--- a/contacto.html
+++ b/contacto.html
@@ -4,15 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DESDISWEB</title>
-    <link rel="stylesheet" href="/desdisweb/css/normalize.css">
-    <link rel="preload" href="/desdisweb/css/normalize.css" as="style">
+    <link rel="stylesheet" href="css/normalize.css">
+    <link rel="preload" href="css/normalize.css" as="style">
     <link href="https://fonts.googleapis.com/css2?family=Krub:ital,wght@400;700&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Nerko+One&display=swap" rel="stylesheet">
-    <link rel="preload" href="../freelancer_inicio/css/styles.css" as="style">
-    <link rel="preload" href="/desdisweb/css/styles.css" as="style">
-    <link rel="stylesheet" href="/desdisweb/css/styles.css">
+    <link rel="preload" href="css/styles.css" as="style">
+    <link rel="stylesheet" href="css/styles.css">
     <script src="https://kit.fontawesome.com/eb496ab1a0.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
   </head>
@@ -24,10 +23,10 @@
 
     <div class="nav-bg">
       <nav class="navegacion-principal contenedor">
-        <a class="navegacion__enlace" href="/desdisweb/index.html">Inicio</a>
-        <a class="navegacion__enlace" href="/desdisweb/quiensoy.html">Quien Soy</a>
-        <a class="navegacion__enlace" href="/desdisweb/servicios.html">Servicios</a>
-        <a class="navegacion__enlace navegacion__enlace--activo" href="/desdisweb/contacto.html">Contacto</a>
+        <a class="navegacion__enlace" href="index.html">Inicio</a>
+        <a class="navegacion__enlace" href="quiensoy.html">Quien Soy</a>
+        <a class="navegacion__enlace" href="servicios.html">Servicios</a>
+        <a class="navegacion__enlace navegacion__enlace--activo" href="contacto.html">Contacto</a>
       </nav>
     </div>
 
@@ -101,7 +100,7 @@
       <p>
         Todos los derechos reservados, <span>DESDISWEB</span> <br>
         © Al navegar por este sitio web acepta nuestra
-        <a class="footer" href="/desdisweb/politicas.html">Política de Privacidad y Cookies.</a>
+        <a class="footer" href="politicas.html">Política de Privacidad y Cookies.</a>
       </p>
     </footer>
   </body>
