--- a/index.html
+++ b/index.html
@@ -410,7 +410,7 @@
                 </div>
               </div>
               <input type="hidden" name="_captcha" value="false">
-              <input type="hidden" name="_next" value="http://127.0.0.1:5500/desdisweb/index.html">
+              <input type="hidden" name="_next" value="https://desdisweb.netlify.app/">
             </fieldset>
           </form>
         </section>
